--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <h1>Linda Clark | WDD 130</h1>
         <img src="images/profile.jpg" alt="My name is Linda Clark" width="200">
-        <p>Hi! My name is Linda Clark and I am from Taiwan, and live in Salt Lake City, Utha. I enjoy spending time with my family, traveling, reading and watching TV.</p>
+        <p>Hi! My name is Linda Clark and I am from Taiwan, and live in Salt Lake City, Utha. I enjoy spending time with my family, traveling, reading, playing video games and watching TV.</p>
     </main>
     <footer>
         <p>©️2023 🐻Linda Clark 🐻 Utah</p>
