--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width"/>
     <title>Linda Clark | WDD 130</title>
   </head>
   <body>
@@ -16,7 +16,7 @@
     <main>
         <h1>Linda Clark | WDD 130</h1>
         <img src="images/profile.jpg" alt="My name is Linda Clark" width="200">
-        <p>Hi! My name is Linda Clark and I am from Taiwan, and live in Salt Lake City, Utha. I enjoy spending time with my family, traveling, reading, playing video games and watching TV.</p>
+        <p>Hello! My name is Linda Clark and I am from Taiwan, and live in Salt Lake City, Utha. I enjoy spending time with my family, traveling, reading, playing video games and watching TV.</p>
     </main>
     <footer>
         <p>©️2023 🐻Linda Clark 🐻 Utah</p>
