index update css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width"/>
   <title>Linda Clark | WDD 130</title>
+  <link type="text/css" rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
@@ -17,7 +18,7 @@
   </header>
   <main>
       <h1>Linda Clark | WDD 130</h1>
-      <img src="images/profile.jpg" alt="My name is Linda Clark" width="200">
+      <img src="images/profile.jpg" alt="My name is Linda Clark" >
       <p>Hi! My name is Linda Clark and I am from Taiwan, and live in Salt Lake City, Utha. I enjoy spending time with my family, traveling, reading, playing video games and watching TV.</p>
   </main>
   <footer>
