--- a/tw/site-plan.html
+++ b/tw/site-plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Food</a>
+        <a href="#">Culture</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Food <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Culture  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,29 +124,73 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Home- History and Location:
+        <br>
+        <br>
+        The island of Taiwan is located approximately 230 miles (370km) off the southeast coast of China. And shares maritime borders with China, Japan, and the Philippians. Taiwan has been a part of the Chinese and Japanese territories throughout the centuries. And was a Japanese territory until, after their defeat in WW2, when China was able to reclaim control of the island in 1945.
+        <br>
+        <br>
+        However, a few years later, China was entrenched in a civil war between the Nationalist and Communist parties. 
+        <br>
+        <br>
+        Following the end of the Chinese civil war in 1949, a general and politician of the Chinese National Army named Chiang Kai-Shek led approximately two million soldiers and millions of citizens to the island of Taiwan, fleeing the new Communist-ruled China. Chiang Kai-shek's original plan was to regroup in Taiwan and eventually lead an army back to mainland China and retake the government for the Nationalist party.
+        <br>
+        <br>
+        However, once it became apparent, that plan would not come to fruition. The Taiwanese government declared its independence from Communist-led China and focused on its own interests, primarily modernization and economic development. Taiwan today is a modern first-world country. That enjoys many freedoms, has a highly educated populace, efficient public transportation, and is a leader in developing electronics and microchips.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/welcome-tw.jpg" alt="welcome to Taiwan image">
+        <img src="images/taiwan-map.jpg" alt="taiwan map image">
+        <img src="images/chiang-kaishek.jpg" alt="Chiang Kai Shek image">
+        <img src="images/taipei.jpg" alt="taipei city view image">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Food</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Taiwan has some of the best-tasting food in all of Southeast Asia. Most of these unique food items can be found in Taiwan's night markets which are scattered across the island's various cities.
+        <br>
+        <br>
+        The first food item I'd recommend is Taiwanese sausages. They're made from pork and have a unique blend of savory and sweet, usually served with a clove of garlic.
+        <br>
+        <br>
+        The next food I'd suggest is Taiwan's stinky tofu, which is usually served fried and with a generous helping of pickled cabbage. The smell, although unpleasant to some, comes with a unique taste many Taiwanese crave.
+        <br>
+        <br>
+        Next is their famous oyster omelets, which are, as you might have guessed, made with oysters, eggs, and a unique sauce similar to ketchup.
+        <br>
+        <br>
+        Another popular Taiwanese food that is making its way around the world is brown sugar boba drinks. These drinks can be found just about anywhere where there is a large population of Chinese-speaking people and has become popular with western cultures as well.
+        <br>
+        <br>
+        Taiwan is also known for its shaved snow desserts, which are frozen cream topped with fresh fruits and sweetened condensed milk. The perfect treat for Taiwan's hot summer days.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for the Food Page</p>
+        <img src="images/night-market.jpg" alt="night market image">
+        <img src="images/taiwan-sausage.jpg" alt="taiwan sausage image">
+        <img src="images/stinky-tofu.jpg" alt="stinky tofu image">
+        <img src="images/oyster-omlets.jpg" alt="oyster omelets image">
+        <img src="images/bobamilk.jpg" alt="boba milk image">
+        <img src="images/shaved-snow.jpg" alt="shaved snow image">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Culture</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Because of Taiwan's History with China, it's easy to see that both countries share many similarities. Like celebrating the Lunar New Year, holding dragon boat festivals, the importance of family, respecting elders, and an emphasis on hard work and studying. Of course, there is speaking Mandarin Chinese as well.
+        <br>
+        <br>
+        All that being said, many parts of Taiwan’s culture are unique. For example, though Mandarin Chinese is the primary language spoken, there is another commonly spoken language called Taiwanese. And the way they teach Mandarin to their children is different than in China. China uses a romanization method (similar) to English words. In contrast, Taiwan uses its phonetic-based system with a unique alphabet called bopomofo. Also, China decades ago switched to a simplified version of writing Chinese characters, while Taiwan still uses traditional characters when writing.
+        <br>
+        <br>
+        Another big difference is religion, though China is primarily a people without religion. Taiwanese people hold many religious beliefs, such as Buddhism, Daoism, Catholicism, Christianity, and more.
+        <br>
+        <br>
+        China wasn't the only culture to have a significant impact on Taiwan before the mass migration of Chinese people led by Chiang Kai-Shek. The island of Taiwan had its own native aboriginal people. These indigenous people had their own traditions, culture, foods, and more that have impacted Taiwan culturally, especially in the less populace cities.
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the Culture Page</p>
+        <img src="images/dragon-dance.jpg" alt="Chinese New Year celebration image">
+        <img src="images/dragonboat.jpg" alt="dragon boat race image">
+        <img src="images/taipei-temple.jpg" alt="Taipei temple image">
+        <img src="images/worship.jpg" alt="worship image">
 
       </ul>
       <hr>
@@ -158,21 +202,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        There will be some information about Taiwan. And pictures of Taiwan’s location, history, and city view.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home-wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Food</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        There will be a night market photo and food suggestions, as short descriptions with a picture next to it.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/food-wireframe.png" alt="food page wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Culture</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        There will be some information about Taiwan’s culture, including the same and differences from China’s culture. Including 4 pictures showing Taiwan’s culture.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/culture-wireframe.png" alt="culture page wireframe">
     </main>
   </body>
 
