--- a/tw/site-plan.html
+++ b/tw/site-plan.html
@@ -86,9 +86,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Food</a>
-        <a href="#">Culture</a>
+        <a href="index.html">Home</a>
+        <a href="food.html">Food</a>
+        <a href="culture.html">Culture</a>
       </nav>
       <hr>
       <h2>
