--- a/tw/food.html
+++ b/tw/food.html
@@ -9,7 +9,7 @@
 <body>
     <div id ="contecnt">
         <header>
-        <a id="logo_link" herf="index.html">
+        <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="TW logo">
         </a>
         <nav>
@@ -18,7 +18,7 @@
             <a href="culture.html">Culture</a>
         </nav>
         </header>
-        <div id="night-market">
+        <div id="food">
             <section id="food-title">
                 <h1 class="food-title">Food</h1>
             </section>
