--- a/tw/culture.html
+++ b/tw/culture.html
@@ -9,7 +9,7 @@
 <body>
     <div id ="contecnt">
         <header>
-        <a id="logo_link" herf="index.html">
+        <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="TW logo">
         </a>
         <nav>
