--- a/tw/index.html
+++ b/tw/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id ="contecnt">
         <header>
-        <a id="logo_link" herf="index.html">
+        <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="TW logo">
         </a>
         <nav>
@@ -35,9 +35,7 @@
             </section>
             <section class="msg1">
                 <p>The island of Taiwan is located approximately 230 miles (370km) off the southeast coast of China. And shares maritime borders with China, Japan, and the Philippians. Taiwan has been a part of the Chinese and Japanese territories throughout the centuries. And was a Japanese territory until, after their defeat in WW2, when China was able to reclaim control of the island in 1945.
-                    <br/>
                     However, a few years later, China was entrenched in a civil war between the Nationalist and Communist parties. 
-                    <br/>
                     Following the end of the Chinese civil war in 1949, a general and politician of the Chinese National Army named Chiang Kai-Shek led approximately two million soldiers and millions of citizens to the island of Taiwan, 
                 </p>
             </section>
@@ -46,7 +44,6 @@
             </section>
             <section class="msg2">
                 <p>fleeing the new Communist-ruled China. Chiang Kai-shek's original plan was to regroup in Taiwan and eventually lead an army back to mainland China and retake the government for the Nationalist party.
-                    <br/>
                     However, once it became apparent, that plan would not come to fruition. The Taiwanese government declared its independence from Communist-led China and focused on its own interests, primarily modernization and economic development. Taiwan today is a modern first-world country. That enjoys many freedoms, has a highly educated populace, efficient public transportation, and is a leader in developing electronics and microchips.
                 </p>
             </section>
