--- a/tw/culture.html
+++ b/tw/culture.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/culture-style.css">
     <title> Visiting Taiwan | Home</title>
 </head>
 <body>
@@ -45,7 +46,9 @@
         </main>
         <footer>
             <p>Visiting Taiwan &copy; 2023 - Linda Clark</p>
-            <p><a href="site-plan.html">Site Plan</a></p>
+            <div class="site-plan">
+            <a href="site-plan.html">Site Plan</a>
+            </div>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
