--- a/tw/index.html
+++ b/tw/index.html
@@ -24,11 +24,11 @@
                 <img id="welcome-img" src="images/welcome-tw.jpg" alt="Welcome to Taiwan">
             </div>
             <section id="welcome-msg">
-            <h1 class="welcome-title">Welcome to Taiwan</h1>
+            <P class="welcome-title">Welcome to Taiwan</P>
             </section>
         </div>
         <main>
-            <h2>History and Location</h2>
+            <h1>History and Location</h1>
             <div id ="main-content">
                 <div class="map">
                 <img class="img" src="images/taiwan-map.jpg" alt="taiwan map image">
