--- a/tw/food.html
+++ b/tw/food.html
@@ -20,44 +20,43 @@
         </nav>
         </header>
         <div id="food">
-            <section id="food-title">
+            <div id="food-box"></div>
                 <h1 class="food-title">Food</h1>
                 <img id="night-market-img" src="images/night-market.jpg" alt="night market image">
-                <p>Taiwan has some of the best-tasting food in all of Southeast Asia. Most of these unique food items can be found in Taiwan's night markets which are scattered across the island's various cities. 
-                </p>
-            </section>
+                    <p class="night-msg">Taiwan has some of the best-tasting food in all of Southeast Asia. Most of these unique food items can be found in Taiwan's night markets which are scattered across the island's various cities. 
+                    </p>
         </div>
         <main class="food-grid">
             <section class="sausage-card">
                 <h3>Taiwan Sausage</h3>
                 <img class="card-img" src="images/taiwan-sausage.jpg" alt="taiwan sausage image">
-                <p>The first food item I'd recommend is Taiwanese sausages. They're made from pork and have a unique blend of savory and sweet, usually served with a clove of garlic.
-                </p>
             </section>
+                <p class="food-msg">The first food item I'd recommend is Taiwanese sausages. They're made from pork and have a unique blend of savory and sweet, usually served with a clove of garlic.
+                </p>
             <section class="stinky-tofu-card">
                 <h3>Stinky Tofu</h3>
                 <img class="card-img" src="images/stinky-tofu.jpg" alt="stinky tofu image">
-                <p>The next food I'd suggest is Taiwan's stinky tofu, which is usually served fried and with a generous helping of pickled cabbage. The smell, although unpleasant to some, comes with a unique taste many Taiwanese crave.
-                </p>
             </section>
+                <p class="food-msg">The next food I'd suggest is Taiwan's stinky tofu, which is usually served fried and with a generous helping of pickled cabbage. The smell, although unpleasant to some, comes with a unique taste many Taiwanese crave.
+                </p>
             <section class="oyster-omlets-card">
                 <h3>Oyster Omelets</h3>
                 <img class="card-img" src="images/oyster-omlets.jpg" alt="oyster omelets image">
-                <p>Next is their famous oyster omelets, which are, as you might have guessed, made with oysters, eggs, and a unique sauce similar to ketchup.
-                </p>
             </section>
+                <p class="food-msg">Next is their famous oyster omelets, which are, as you might have guessed, made with oysters, eggs, and a unique sauce similar to ketchup.
+                </p>
             <section class="boba-card">
                 <h3>Boba Milk</h3>
                 <img class="card-img" src="images/bobamilk.jpg" alt="boba milk image">
-                <p>Another popular Taiwanese food that is making its way around the world is brown sugar boba drinks. These drinks can be found just about anywhere where there is a large population of Chinese-speaking people and has become popular with western cultures as well.
-                </p>
             </section>
+                <p class="food-msg">Another popular Taiwanese food that is making its way around the world is brown sugar boba drinks. These drinks can be found just about anywhere where there is a large population of Chinese-speaking people and has become popular with western cultures as well.
+                </p>
             <section class="shaved-snow-card">
                 <h3>Shaved Snow</h3>
                 <img class="card-img" src="images/shaved-snow.jpg" alt="bshaved snow image">
-                <p>Taiwan is also known for its shaved snow desserts, which are frozen cream topped with fresh fruits and sweetened condensed milk. The perfect treat for Taiwan's hot summer days.
-                </p>
             </section>
+                <p class="food-msg">Taiwan is also known for its shaved snow desserts, which are frozen cream topped with fresh fruits and sweetened condensed milk. The perfect treat for Taiwan's hot summer days.
+                </p>
         </main>
         <footer>
             <p>Visiting Taiwan &copy; 2023 - Linda Clark</p>
