--- a/tw/index.html
+++ b/tw/index.html
@@ -44,11 +44,16 @@
                     However, once it became apparent, that plan would not come to fruition. The Taiwanese government declared its independence from Communist-led China and focused on its own interests, primarily modernization and economic development. Taiwan today is a modern first-world country. That enjoys many freedoms, has a highly educated populace, efficient public transportation, and is a leader in developing electronics and microchips.
                 </p>
                 </div>
-                <div class="cks">
-                <img class="img" src="images/chiang-kaishek.jpg" alt="Chiang Kai Shek image">
+                <div class="container">
+                    <div class="cks">
+                        <img class="img" src="images/chiang-kaishek.jpg" alt="Chiang Kai Shek image">
+                        <div class="text-block">
+                            <h18>Chiang Kai-shek Memorial Hall</h18>
+                        </div>
+                    </div>
                 </div>
                 <div class="tpe">
-                <img id="img-tpe" src="images/taipei.jpg" alt="taipei city view image">
+                    <img id="img-tpe" src="images/taipei.jpg" alt="taipei city view image">
                 </div>
             </div>
         </main>
