--- a/tw/culture.html
+++ b/tw/culture.html
@@ -19,31 +19,26 @@
             <a href="culture.html">Culture</a>
         </nav>
         </header>
-        <section id="culture-title">
+        <main>
             <h1 class="culture-title">Culture</h1>
-        </section>
-        <main class="culture-grid">
-            <section id="dragon-dance-card">
-                <img class="card-img" src="images/dragon-dance.jpg" alt="Chinese New Year celebration image">
-            </section>
-            <section id="dragon-boat-card">
-                <img class="card-img" src="images/dragonboat.jpg" alt="dragon boat race image">
-            </section>
-            <section class="culture-msg">
-                <p>
-                    Because of Taiwan's History with China, it's easy to see that both countries share many similarities. Like celebrating the Lunar New Year, holding dragon boat festivals, the importance of family, respecting elders, and an emphasis on hard work and studying. Of course, there is speaking Mandarin Chinese as well.
-                    All that being said, many parts of Taiwan’s culture are unique. For example, though Mandarin Chinese is the primary language spoken, there is another commonly spoken language called Taiwanese. And the way they teach Mandarin to their children is different than in China. China uses a romanization method (similar) to English words. In contrast, Taiwan uses its phonetic-based system with a unique alphabet called bopomofo. Also, China decades ago switched to a simplified version of writing Chinese characters, while Taiwan still uses traditional characters when writing.
-                    Another big difference is religion, though China is primarily a people without religion. Taiwanese people hold many religious beliefs, such as Buddhism, Daoism, Catholicism, Christianity, and more.
-                    China wasn't the only culture to have a significant impact on Taiwan before the mass migration of Chinese people led by Chiang Kai-Shek. The island of Taiwan had its own native aboriginal people. These indigenous people had their own traditions, culture, foods, and more that have impacted Taiwan culturally, especially in the less populace cities.
-                </p>
-            </section>
-            <section id="temple-card">
-                <img class="card-img" src="images/taipei-temple.jpg" alt="Taipei temple image">
-            </section>
-            <section id="worship-card">
-                <img class="card-img" src="images/worship.jpg" alt="worship image">
-            </section>
-        </main>
+            <div id="culture-grid"> 
+                <div id="img-container">
+                <img src="images/dragon-dance.jpg" alt="Chinese New Year celebration image">
+                <img src="images/dragonboat.jpg" alt="dragon boat race image">
+                </div> 
+                <div id="msg">
+                    <p>Because of Taiwan's History with China, it's easy to see that both countries share many similarities. Like celebrating the Lunar New Year, holding dragon boat festivals, the importance of family, respecting elders, and an emphasis on hard work and studying. Of course, there is speaking Mandarin Chinese as well.
+                        All that being said, many parts of Taiwan’s culture are unique. For example, though Mandarin Chinese is the primary language spoken, there is another commonly spoken language called Taiwanese. And the way they teach Mandarin to their children is different than in China. China uses a romanization method (similar) to English words. In contrast, Taiwan uses its phonetic-based system with a unique alphabet called bopomofo. Also, China decades ago switched to a simplified version of writing Chinese characters, while Taiwan still uses traditional characters when writing.
+                        Another big difference is religion, though China is primarily a people without religion. Taiwanese people hold many religious beliefs, such as Buddhism, Daoism, Catholicism, Christianity, and more.
+                        China wasn't the only culture to have a significant impact on Taiwan before the mass migration of Chinese people led by Chiang Kai-Shek. The island of Taiwan had its own native aboriginal people. These indigenous people had their own traditions, culture, foods, and more that have impacted Taiwan culturally, especially in the less populace cities.
+                    </p>
+                </div>
+                <div id="img-container">
+                <img src="images/taipei-temple.jpg" alt="Taipei temple image">
+                <img src="images/worship.jpg" alt="worship image">
+                </div>
+            </div>  
+            </main>
         <footer>
             <p>Visiting Taiwan &copy; 2023 - Linda Clark</p>
             <div class="site-plan">
