--- a/tw/culture.html
+++ b/tw/culture.html
@@ -22,7 +22,7 @@
         <main>
             <h1 class="culture-title">Culture</h1>
             <div id="culture-grid"> 
-                <div id="img-container">
+                <div class="img-container">
                 <img src="images/dragon-dance.jpg" alt="Chinese New Year celebration image">
                 <img src="images/dragonboat.jpg" alt="dragon boat race image">
                 </div> 
@@ -33,7 +33,7 @@
                         China wasn't the only culture to have a significant impact on Taiwan before the mass migration of Chinese people led by Chiang Kai-Shek. The island of Taiwan had its own native aboriginal people. These indigenous people had their own traditions, culture, foods, and more that have impacted Taiwan culturally, especially in the less populace cities.
                     </p>
                 </div>
-                <div id="img-container">
+                <div class="img-container">
                 <img src="images/taipei-temple.jpg" alt="Taipei temple image">
                 <img src="images/worship.jpg" alt="worship image">
                 </div>
